Archive2/4d/78f4be4e1e3ff2/output
main.cpp: In function 'int main()':
main.cpp:8:5: error: 'nValue' was not declared in this scope
     nValue = static_cast<int>(i / 2.5);
     ^
main.cpp:13:9: warning: unused variable 'b' [-Wunused-variable]
     Bit b;
         ^
